syntax = "proto3";
option go_package="proto/gen/userpb;userpb";

import "google/protobuf/empty.proto";

service User {
    rpc CreateUser(UserInfo) returns (google.protobuf.Empty);
}

message UserInfo {
    string mobile = 1;
    string password = 2;
}
//protoc -I=./proto --go_out=plugins=grpc:. proto/user.proto